<resources>
    <string name="app_name">Voting App</string>
    <string name="title_activity_welcome_page">welcomePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="epic_no">EPIC NO:</string>
    <string name="cast_vote">CAST VOTE</string>
    <string name="verify_vote">VERIFY VOTE</string>
    <string name="loading">Loading…</string>
    <string name="confirm">CONFIRM</string>
    <string name="votedFor">You have voted for:</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facial_recognition">Facial Recognition</string>
    <string name="place_your_finger_on_the_fingerPrint">Place Your Finger on the \n Fingerprint Scanner</string>
    <string name="please_put_your_face_in_front_of_camera">Please Put Your Face in front of Camera</string>
    <string name="submit">Submit</string>
    <string name="capture">Capture</string>
    <string name="todo">TODO</string>
    <string name="confirm_vote">Confirm Vote</string>
    <string name="contact_election_commision"><a href="https://eci.gov.in/">CONTACT ELECTION COMMISSION</a></string>
</resources>
