<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imgview55"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FacialRecognition">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/facerecog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/facial_recognition"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/capturedImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:minWidth="300dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facerecog"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/facerecogWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_put_your_face_in_front_of_camera"
            android:textColor="#F41D1D"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capturedImage"
            app:layout_constraintVertical_bias="0.01" />

        <Button
            android:id="@+id/faceRecCaptureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/capture"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facerecogWarning"
            app:layout_constraintVertical_bias="0.1" />

        <Button
            android:id="@+id/faceRecSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/submit"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faceRecCaptureButton"
            app:layout_constraintVertical_bias="0.1" />

        <ProgressBar
            android:id="@+id/pBarfc"
            style="?android:attr/progressBarStyle"
            android:layout_width="29dp"
            android:layout_height="33dp"
            app:layout_constraintBottom_toBottomOf="@id/faceRecSubmitButton"
            app:layout_constraintEnd_toEndOf="@id/faceRecSubmitButton"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/faceRecSubmitButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>